--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Personal GitHub Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="css/styles.css" rel="stylesheet">
+    <link rel="icon" type="image/ico" href="favicon.ico"/>
   </head>
   <body>
     <h1>Balance Calculator</h1>
