--- a/index.html
+++ b/index.html
@@ -9,7 +9,86 @@
     <link rel="icon" type="image/ico" href="favicon.ico"/>
   </head>
   <body>
-    <h1>Balance Calculator</h1>
+    <div class="container">
+      <h1 class="text-center mt-5 mb-5">Balance Calculator</h1>
+      <div class="row mb-3 text-secondary">
+        <div class="col">Asset</div>
+        <div class="col">USDT Price</div>
+        <div class="col">Initial</div>
+        <div class="col">Final</div>
+        <div class="col">Diff</div>
+        <div class="col">Profit/Loss</div>
+      </div>
+      <form>
+        <div class="row mb-3">
+          <div class="col">
+            <h5 class="text-secondary">BNB</h5>
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" value="0">
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" value="0">
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" value="0">
+          </div>
+          <div class="col">0</div>
+          <div class="col">0</div>
+        </div>
+        <div class="row mb-3">
+          <div class="col">
+            <h5 class="text-secondary">Asset 1</h5>
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" value="0">
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" value="0">
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" value="0">
+          </div>
+          <div class="col">0</div>
+          <div class="col">0</div>
+        </div>
+        <div class="row mb-3">
+          <div class="col">
+            <h5 class="text-secondary">Asset 2</h5>
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" value="0">
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" value="0">
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" value="0">
+          </div>
+          <div class="col">0</div>
+          <div class="col">0</div>
+        </div>
+        <div class="row mb-3">
+          <div class="col">
+            <h5 class="text-secondary">Asset 3</h5>
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" value="0">
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" value="0">
+          </div>
+          <div class="col">
+            <input type="text" class="form-control" value="0">
+          </div>
+          <div class="col">0</div>
+          <div class="col">0</div>
+        </div>
+      </form>
+      <div class="row">
+        <h3>TOTAL</h3>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="js/balance.js"></script>
   </body>
