--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="col">Diff</div>
         <div class="col">Profit/Loss</div>
       </div>
-      <form>
+      <form id="balance-form">
         <div class="row mb-3">
           <div class="col">
-            <h5 class="text-secondary">BNB</h5>
+            <input type="text" class="asset-input form-control" value="BNB">
           </div>
           <div class="col">
             <input type="text" class="form-control" value="0">
@@ -38,7 +38,7 @@
         </div>
         <div class="row mb-3">
           <div class="col">
-            <h5 class="text-secondary">Asset 1</h5>
+            <input type="text" class="asset-input form-control" value="Asset 1">
           </div>
           <div class="col">
             <input type="text" class="form-control" value="0">
@@ -54,7 +54,7 @@
         </div>
         <div class="row mb-3">
           <div class="col">
-            <h5 class="text-secondary">Asset 2</h5>
+            <input type="text" class="asset-input form-control" value="Asset 2">
           </div>
           <div class="col">
             <input type="text" class="form-control" value="0">
@@ -70,7 +70,7 @@
         </div>
         <div class="row mb-3">
           <div class="col">
-            <h5 class="text-secondary">Asset 3</h5>
+            <input type="text" class="asset-input form-control" value="Asset 3">
           </div>
           <div class="col">
             <input type="text" class="form-control" value="0">
