--- a/index.html
+++ b/index.html
@@ -2,31 +2,31 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.png" />
+		<link rel="icon" href="favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.X0w6pYl1.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DLcInCT8.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/runtime.Bpkrvuat.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/index-client.BxetMWMC.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.CE5qPGHG.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/render.DKI-zuUx.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/disclose-version.Dw92KNBI.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/proxy.DnJOTsQQ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BTZTVo5z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B-X20JX8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.Bpkrvuat.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.BxetMWMC.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CunPYQYq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/render.DKI-zuUx.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Dw92KNBI.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/proxy.DnJOTsQQ.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1iyjxdi = {
+					__sveltekit_1em2ut9 = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.X0w6pYl1.js"),
-						import("/_app/immutable/entry/app.CE5qPGHG.js")
+						import("./_app/immutable/entry/start.BTZTVo5z.js"),
+						import("./_app/immutable/entry/app.CunPYQYq.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
