--- a/index.html
+++ b/index.html
@@ -4,34 +4,26 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.BTZTVo5z.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B-X20JX8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.Bpkrvuat.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.BxetMWMC.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CunPYQYq.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/render.DKI-zuUx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.Dw92KNBI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/proxy.DnJOTsQQ.js">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">
-			<script>
-				{
-					__sveltekit_1em2ut9 = {
-						base: ""
-					};
+	<body>
+		<div id="balances-form">
+    </div>
+    <script>
+      // Create a global "html" to use inside components
+      let html;
+    </script>
+    <script src="js/balances.js"></script>
+    <script type="module">
+      // Load global modules
+      import { h, render } from 'https://esm.sh/preact';
+      import htm from 'https://esm.sh/htm';
 
-					const element = document.currentScript.parentElement;
+      // Initialize htm with Preact
+      html = htm.bind(h);
 
-					Promise.all([
-						import("./_app/immutable/entry/start.BTZTVo5z.js"),
-						import("./_app/immutable/entry/app.CunPYQYq.js")
-					]).then(([kit, app]) => {
-						kit.start(app, element);
-					});
-				}
-			</script>
-		</div>
-	</body>
+      // Render the balances form component
+      render(html`<${BalancesForm} />`, document.getElementById('balances-form'));
+    </script>
+  </body>
 </html>
